Update haproxy config

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -25,140 +25,26 @@ frontend proxy-https
     bind *:443 ssl crt /etc/ssl/haproxy.pem
 
     mode http
-#   acl is_root path -i /
 
-    # cons-httpd with default config
     acl mailpy-acl path_beg /mailpy
-    use_backend mailpy-backend if mailpy-acl
+    acl mailpy-api-acl path_beg /mailpy/api
 
-#   acl archiver-mgmt path_beg -i /mgmt
-#   acl archiver-retrieval path_beg -i /retrieval
+    use_backend mailpy-backend     if !mailpy-api-acl mailpy-acl 
+    use_backend mailpy-api-backend if  mailpy-api-acl
 
-#   acl dllrf_fdl_bo path_beg /fdl-bo
-#   acl dllrf_fdl_sr path_beg /fdl-sr
-#   acl epics2web path_beg /epics2web
 
-#   acl facs-config-db path_beg -i /config-db
-#   acl facs_constants path_beg /control-system-constants
-
-#   acl olog path_beg -i /olog
-#   acl webdis path_beg -i /webdis
-#   acl zabbix path_beg -i /zabbix
-
-#   redirect scheme https code 301 if !{ ssl_fc } !cons-httpd-acl !epics2web !dllrf_fdl_bo !dllrf_fdl_sr !facs_constants !facs-config-db !archiver-retrieval !webdis
-#   redirect scheme http  code 301 if { ssl_fc } facs-config-db
-#   redirect location https://10.0.38.46:20093 if zabbix
-
-#   use_backend archiver_backend_mgmt if archiver-mgmt
-#   use_backend archiver_backend_retrieval if archiver-retrieval
-#   use_backend facs-config-db-backend if facs-config-db
-#   use_backend cons_httpd_backend if cons-httpd-acl
-#   use_backend dllrf_fdl_bo_backend if dllrf_fdl_bo
-#   use_backend dllrf_fdl_sr_backend if dllrf_fdl_sr
-#   use_backend epics2web_backend if epics2web
-#   use_backend facs_constants_backend if facs_constants
-#   use_backend webdis_backend if webdis
-
-#   acl secured_cookie res.hdr(Set-Cookie),lower -m sub secure
-#   rspirep ^(set-cookie:.*) \1;\ Secure
-#   use_backend olog_backend if olog
-
+# NGINX serving the web page
 backend mailpy-backend
     mode http
     balance roundrobin
     redirect scheme https code 301 if !{ ssl_fc }
 
-    server localhost 127.0.0.1:3006 check
+    server ClaudioPC 192.168.50.102:3006 check
 
-backend epics2web_backend
+# NodeJS Express API
+backend mailpy-api-backend
     mode http
     balance roundrobin
+    redirect scheme https code 301 if !{ ssl_fc }
 
-    http-response add-header Access-Control-Allow-Origin *
-    
-    server CA-RaCtrl-CO-Srv-1 10.128.2.4:8080 check
-    server LA-RaCtrl-CO-Srv-1 10.128.2.3:8080 check
-    
-backend cons_httpd_backend 
-    mode http
-    balance roundrobin
-    
-    server CA-RaCtrl-CO-Srv-1 10.128.2.4:20090 check
-    server LA-RaCtrl-CO-Srv-1 10.128.2.3:20090 check
-
-backend dllrf_fdl_bo_backend
-    mode http
-    http-request replace-path "^([^\ :]*)\ /fdl-bo(.*)"    \1\ /FDL\2
-    server rf_bo_dell_serv 10.128.124.140:8080 check
-
-backend dllrf_fdl_sr_backend
-    mode http
-    http-request replace-path "^([^\ :]*)\ /fdl-sr(.*)"    \1\ /FDL\2
-    server rf_sr_dell_serv 10.128.124.141:8080 check
-
-backend bbb_daemon_backend
-    mode http
-    balance roundrobin
-
-    http-request replace-path "^([^\ :]*)\ /bbb-daemon/api/(.*)"    \1\ /\2
-    
-    server CA-RaCtrl-CO-Srv-1 10.128.2.4:4850 check
-    server LA-RaCtrl-CO-Srv-1 10.128.2.3:4850 check
-
-backend olog_backend
-    mode http
-    balance roundrobin
-
-    http-request replace-path ^([^\ ]*\ /)olog(.*) \1Olog\2
-
-    server CA-RaCtrl-CO-Srv-1 10.128.2.4:8181 ssl check
-    server LA-RaCtrl-CO-Srv-1 10.128.2.3:8181 ssl check
-
-backend archiver_backend_mgmt
-    mode http
-    balance roundrobin
-
-    cookie JSESSIONID prefix nocache
-
-    # Attempt to add a prefix into the URL : cookies are not being held
-    # http-request replace-path ^([^\ ]*\ /)con-archiver/(.*) \1\2
-    http-response add-header Access-Control-Allow-Origin *
-
-    server CA-RaCtrl-CO-Srv-1 10.128.2.4:12995 ssl check
-    server LA-RaCtrl-CO-Srv-1 10.128.2.3:12995 ssl check
-
-backend archiver_backend_retrieval
-    mode http
-    balance roundrobin
-
-    # Attempt to add a prefix into the URL
-    # http-request replace-path ^([^\ ]*\ /)con-archiver/(.*) \1\2
-
-    server CA-RaCtrl-CO-Srv-1 10.128.2.4:12998 check
-    server LA-RaCtrl-CO-Srv-1 10.128.2.3:12998 check
-
-backend facs_constants_backend
-    mode http
-    balance roundrobin
-
-    server CA-RaCtrl-CO-Srv-1 10.128.2.4:20080 check
-    server LA-RaCtrl-CO-Srv-1 10.128.2.3:20080 check
-
-backend facs-config-db-backend
-    mode http
-    balance roundrobin
-
-    http-request replace-path "^([^\ :]*)\ /config-db(.*)"    \1\ /\2
-
-    server CA-RaCtrl-CO-Srv-1 10.128.2.4:8085 check
-    server LA-RaCtrl-CO-Srv-1 10.128.2.3:8085 check
-
-backend webdis_backend
-    mode http
-    balance roundrobin
-
-    http-request replace-path "^([^\ :]*)\ /webdis/(.*)"    \1\ /\2
-    
-    server CA-RaCtrl-CO-Srv-1 10.128.2.4:7379 check
-    server LA-RaCtrl-CO-Srv-1 10.128.2.3:7379 check
-
+    server ClaudioPC 192.168.50.102:1337 check ssl
