--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,21 @@
 version: "3.7"
 services:
+  haproxy:
+    container_name: haproxy
+    image: haproxy:2.2.6
+    ports:
+      - target: 443
+        published: 443
+        protocol: tcp
+        mode: host
+      - target: 80
+        published: 80
+        protocol: tcp
+        mode: host
+    volumes:
+      - /home/carneirofc/mailpy-appliance/haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg
+      - /home/carneirofc/mailpy-appliance/haproxy/keys/haproxy.pem:/etc/ssl/haproxy.pem
+
   db:
     hostname: db
     image: lnlscon/mailpy-db:v1.0
@@ -23,54 +39,72 @@ services:
       # Set username and password if needed
       # mongodb://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
       MONGODB_URI: mongodb://db:27017/mailpy-db
-#   volumes: # Use volumes so we can develop without docker swarm
+#   volumes: # Use volumes to develop without docker swarm
 #     - ./ALERT_MAIL_LOGIN:/run/secrets/ALERT_MAIL_LOGIN
 #     - ./ALERT_MAIL_PASSWORD:/run/secrets/ALERT_MAIL_PASSWORD
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "10"
     networks:
       - hostnet
 
+# api-dev:
+#   image: node:12.19.0-stretch
+#   working_dir: /app
+#   command: bash -c 'set -x; [[ ! -d node_modules || "$FORCE_INSTALL"=true ]] && npm install; [[ "$DEV"=true ]] && npm run dev || npm run start;'
+#   stdin_open: true # without this node doesn't start
+#   user: "${UID}:${GID}"
+#   environment:
+#     # Set username and password if needed
+#     # mongodb://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
+#     MONGODB_URI: mongodb://db:27017/mailpy-db
+#     NODE_ENV: development
+#     FORCE_INSTALL: "false"
+#     DEV: "true"
+#     API_SECRET: ""
+#   volumes:
+#     - "./api:/app"
+#   ports:
+#     - 1337:1337
+#   networks:
+#     - mailpylocal
+
   api:
-    image: node:12.19.0-stretch
-    working_dir: /app
-    command: bash -c 'set -x; [[ ! -d node_modules || "$FORCE_INSTALL"=true ]] && npm install; [[ "$DEV"=true ]] && npm run dev || npm run start;'
-    stdin_open: true # without this node doesn't start
-    user: "${UID}:${GID}"
+    image: lnlscon/mailpyapi:v1.0
+    build:
+      context: ./api
     environment:
-      # Set username and password if needed
       # mongodb://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
-      MONGODB_URI: mongodb://db:27017/mailpy-db
-      NODE_ENV: development
-      FORCE_INSTALL: "false"
-      DEV: "true"
-      API_SECRET: ""
-    volumes:
-      - "./api:/app"
+      MONGODB_URI: mongodb://192.168.50.102:27017/mailpy-db
+      NODE_ENV: production
     ports:
       - 1337:1337
     networks:
       - mailpylocal
 
   frontend:
-    image: node:12.19.0-stretch
-    working_dir: /app
-    command: bash -c 'set -x; [[ ! -d node_modules || "$FORCE_INSTALL"=true ]] && npm install; npm run start;'
-    stdin_open: true # without this node doesn't start
-    user: "${UID}:${GID}"
-    environment:
-      API_URI: "https://localhost:1337"
-      NODE_ENV: development
-      FORCE_INSTALL: "false"
-    volumes:
-      - "./frontend:/app"
+    # It is necessary to run this behind a proxy with SSL or to update the nginx config
+    image: lnlscon/mailpyfrontend:v1.0
+    build:
+      context: ./frontend
     ports:
-      - 3006:3006
+      - 3006:80
     networks:
       - mailpylocal
+
+# frontend-dev:
+#   image: node:12.19.0-stretch
+#   working_dir: /app
+#   command: bash -c 'set -x; [[ ! -d node_modules || "$FORCE_INSTALL"=true ]] && npm install; npm run start;'
+#   stdin_open: true # without this node doesn't start
+#   user: "${UID}:${GID}"
+#   environment:
+#     API_URI: "https://localhost:1337"
+#     NODE_ENV: development
+#     FORCE_INSTALL: "false"
+#   volumes:
+#     - "./frontend:/app"
+#   ports:
+#     - 3006:3006
+#   networks:
+#     - mailpylocal
 
 networks:
   hostnet:
