--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
     environment:
       # Set username and password if needed
       # mongodb://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
-      MONGODB_URI: mongodb://db:27017/mailpy-db
+      MONGODB_URI: mongodb://db:27017/mailpy
 #   volumes: # Use volumes to develop without docker swarm
 #     - ./ALERT_MAIL_LOGIN:/run/secrets/ALERT_MAIL_LOGIN
 #     - ./ALERT_MAIL_PASSWORD:/run/secrets/ALERT_MAIL_PASSWORD
@@ -68,7 +68,7 @@ services:
     environment:
       # Set username and password if needed
       # mongodb://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
-      MONGODB_URI: mongodb://192.168.50.102:27017/mailpy-db
+      MONGODB_URI: mongodb://192.168.50.102:27017/mailpy
       NODE_ENV: development
       FORCE_INSTALL: "false"
       DEV: "true"
@@ -86,7 +86,7 @@ services:
       context: ./api
     environment:
       # mongodb://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
-      MONGODB_URI: mongodb://192.168.50.102:27017/mailpy-db
+      MONGODB_URI: mongodb://192.168.50.102:27017/mailpy
       NODE_ENV: production
     ports:
       - 1337:1337
